fixed selete input width on mobile screen'

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@
     @apply bg-zinc-100 p-1 my-3 mx-2 shadow shadow-zinc-300 border rounded;
   }
   .input-select {
-    @apply rounded px-3 my-2 mx-2 p-1 bg-white shadow shadow-zinc-200 border;
+    @apply rounded px-3 my-2 mx-2 p-1 bg-white shadow shadow-zinc-200 border max-w-[80vw];
   }
 }
